--- a/ders4.8/src/index.css
+++ b/ders4.8/src/index.css
@@ -1,5 +1,9 @@
+body{
+  display: flex;
+  justify-content: center;
+}
 .custom-button {
-  padding: 10px 20px;
+  padding: 20px 50px;
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 5px;
@@ -13,10 +17,15 @@
 }
 
 .custom-button.warn {
-  border-color: red;
-  color: red;
+  border-color: rgb(115, 39, 255);
+  color: rgb(115, 39, 255);
 }
 
 .custom-button.hint {
   font-style: italic;
+}
+#root{
+  display: flex;
+  align-items: center;
+  height: 500px;
 }
