--- a/ders4.9/src/index.css
+++ b/ders4.9/src/index.css
@@ -1,24 +1,68 @@
-body{
-  font-family: 'Arial', sans-serif;
+:root {
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
+}
+a:hover {
+  color: #535bf2;
+}
+
+body {
+  margin: 0;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 40px;
+  place-items: center;
+  min-width: 320px;
+  min-height: 100vh;
 }
-button{
-  padding: 6px 10px;
-  margin: 10px;
+
+h1 {
+  font-size: 3.2em;
+  line-height: 1.1;
 }
-#root{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: 1px solid #000000;
-  width: 500px;
-  border-radius: 30px;
-  background-color: rgb(181, 254, 254);
-  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.5);
+
+button {
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
-li{
-  margin-bottom: 10px;
+button:hover {
+  border-color: #646cff;
+}
+button:focus,
+button:focus-visible {
+  outline: 4px auto -webkit-focus-ring-color;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
